# learning

./: README.md
.github/workflows/: hex2rgb.yml  webmention-cli.yml
advent-of-code/php-2019/: a1.php  a2.php
airflow/first/: README.md  docker-compose.yml  init.sql
alfred/one-updater-example/: Example updated.alfredworkflow  example-updated.alfredworkflow  example-updated.plist  info.plist  plist-update.bash
antlr4/: composer.json  shell.nix
category-theory/category-theory-for-programmers/: Chapter1.hs  Chapter2.hs  Makefile
comic-server/: .envrc  vercel.json
comic-server/api/: comics.ts
css/: css-grid.html
ebpf/first/: Dockerfile  hello_world.py
elixir/hello-seville/: simple.exs
elixir/hello_world/: mix.exs
elixir/rock-scissor-paper/: .rock-scissor-paper.exs.swp  rock-scissor-paper.exs
elixir/sysstats/: mix.exs  top.exs
elm/azul/: .envrc  elm.json  index.html
elm/block-host/: .envrc  Makefile  nix-mate.json
elm/chess/: .envrc  Makefile  elm.json
elm/chess/server/: Cargo.toml  README.md  gleam.toml  rebar.config
elm/chess/server/src/: main.rs  server.app.src  server.gleam  server_app.erl
elm/chess/server/test/: server_test.gleam
elm/game-drm/: .envrc  Makefile  elm.json
elm/n-body/: .envrc
fastai/: 02_production.ipynb
haskell/: renderTime.hs
idris/: hello.ibc  hello.idr
ising/: elm.json
rust/webmention-cli/: Cargo.toml  Makefile  shell.nix
rust/webmention-cli/src/: main.rs
service-workersr/: README.md  index.html  offline.html  serviceworker.js
unison/: .unisonHistory  scratch.u  terminalColours.u
(+549 files in other folders)
