[package]
name = "webmention-cli"
version = "0.1.0"
authors = ["Daniel Wehner <dawehner@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"
dialoguer = "0.6.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
openssl-sys = "*"