[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Wehner <dawehner@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.1"
serde_json = "1.0"
serde = { version = "1.0.116", features = ["derive"] }